--- a/style.css
+++ b/style.css
@@ -2,22 +2,27 @@
     display: flex;
     justify-content: center;   
     flex-direction: column;
-    gap: 10px;
+    gap: 1px;
+    height: 100%;
 }
 
 .row {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 10px;
+    gap: 1px;
 }
 
 .square {
     border-color: black;
-    border-width: medium;
+    border-width: thin;
     border-style: solid;
-    width: 50px;
-    height: 50px;
+/*  
+    height: 10px;
+    width: 10px;
+ */  
+    flex: 1 0 auto;
+    aspect-ratio: 1 / 1;
 }
 
 .input {
@@ -25,4 +30,3 @@
     justify-content: center;
     margin: 10px;
 }
-
